# AdvCppTP

./: .gitignore  README.md
hw-1/: CMakeLists.txt
hw-1/Descriptor_lib/src/: Descriptor.cpp
hw-1/Process_lib/: CMakeLists.txt
hw-1/Process_lib/include/: Process.hpp  utils.hpp
hw-1/Process_lib/src/: Process.cpp  utils.cpp
hw-1/Protocol_lib/: CMakeLists.txt
hw-1/Protocol_lib/include/: Protocol.hpp
hw-1/Protocol_lib/src/: Protocol.cpp
hw-1/example/: CMakeLists.txt  CMakelists.txt  child.cpp  parent.cpp
hw-1/example/include/: Protocol.hpp
hw-1/example/src/: Protocol.cpp  child.cpp  parent.cpp
hw-1/include/: Descriptor.hpp  ProcError.hpp  Process.hpp  process.hpp  utils.hpp
hw-1/lib/include/: Protocol.hpp
hw-1/lib/src/: Protocol.cpp
hw-1/src/: Descriptor.cpp  ProcError.cpp  Process.cpp  process.cpp  utils.cpp
hw-2/: CMakeLists.txt
hw-2/example/: vector_example.cpp
hw-2/include/: BaseLogger.hpp  Logger.hpp  LoggerErrors.hpp
hw-2/src/: BaseLogger.cpp  Logger.cpp  LoggerErrors.cpp
hw-3/: CMakeLists.txt  Process_lib
hw-3/example/: CMakeLists.txt  test1.cpp
hw-3/include/: Connection.hpp  Errors.hpp  Server.hpp  utils.hpp
hw-3/src/: Connection.cpp  Errors.cpp  Server.cpp  utils.cpp
hw-4/: CMakeLists.txt
hw-4/examples/: CMakeLists.txt  client.cpp  echo_server.cpp  test_epoll.cpp
hw-4/include/: Connection.hpp  Errors.hpp  Server.hpp  utils.hpp
hw-4/src/: Connection.cpp  EpollManager.cpp  Errors.cpp  Server.cpp  utils.cpp
hw-5/: CMakeLists.txt
hw-5/example/: CMakeLists.txt  example.cpp  example_int_str.cpp  example_str_int.cpp  list.cpp
hw-5/shmem_lib/: CMakeLists.txt
hw-5/shmem_lib/include/: Allocator.hpp  Map.hpp  ShmemErrors.hpp
hw-5/shmem_lib/include/utils/: SemLock.hpp  Utils.hpp
hw-5/shmem_lib/src/: ShmemErrors.cpp
hw-5/shmem_lib/src/utils/: SemLock.cpp
hw-6/: CMakeLists.txt
hw-6/Coroutine_lib/: CMakeLists.txt
hw-6/Coroutine_lib/include/: Coroutine.hpp
hw-6/Coroutine_lib/src/: coroutine.cpp  main.cpp
hw-6/Descriptor_lib/: CMakeLists.txt
hw-6/Descriptor_lib/include/: Descriptor.hpp
hw-6/HttpFramework/: CMakeLists.txt
hw-6/HttpFramework/example/: CMakeLists.txt  example.cpp
hw-6/HttpFramework/include/: Connection.hpp  Errors.hpp  HttpRequest.hpp  HttpResponse.hpp  Server.hpp  constants.hpp  utils.hpp
hw-6/HttpFramework/include/Server/: EpollManager.hpp  Receiver.hpp  Server.hpp
hw-6/HttpFramework/include/http_structures/: FirstLines.h  HeaderMap.hpp  HeadersMap.hpp  HttpRequest.hpp  HttpResponse.hpp
hw-6/HttpFramework/include/utils/: utils.hpp
hw-6/HttpFramework/src/: Connection.cpp  EpollManager.cpp  Errors.cpp  HttpRequest.cpp  HttpResponse.cpp  Server.cpp  utils.cpp
hw-6/HttpFramework/src/Server/: EpollManager.cpp  Receiver.cpp  Server.cpp
hw-6/HttpFramework/src/http_structures/: FirstLines.cpp  HeaderMap.cpp  HeadersMap.cpp  HttpRequest.cpp  HttpResponse.cpp
hw-6/HttpFramework/src/utils/: utils.cpp
hw-6/Logger_lib/include/: BaseLogger.hpp
hw-6/Logger_lib/src/: BaseLogger.cpp
hw-6/hw-7/: CMakeLists.txt
hw-6/hw-7/FileGenerator/: FileGenerator.cpp
hw-6/hw-7/include/: Data.hpp  constants.hpp
hw-6/hw-7/include/FileReader/: FileReader.hpp  IndexMaker.hpp
hw-6/hw-7/include/IndexMaker/: IndexMaker.hpp
hw-6/hw-7/include/KVReader/: KVReader.hpp
hw-6/hw-7/include/MmapIO/: ForwardReader.hpp  RandomReader.hpp  RandomWriter.hpp
hw-6/hw-7/include/utils/: utils.hpp
hw-6/hw-7/src/FileGenerator/: FileGenerator.cpp
hw-6/hw-7/src/IndexMaker/: IndexMaker.cpp
hw-6/hw-7/src/KVReader/: KVReader.cpp
hw-6/hw-7/src/MmapIO/: ForwardReader.cpp  RandomReader.cpp  RandomWriter.cpp
hw-6/hw-7/src/utils/: utils.cpp
lectures/: lec1.txt
studies/allocator/: CMakeLists.txt  allocator.cpp
studies/processes/: execl_.cpp  file_is_opened.c  fork.cpp  hello.txt  pipe.c  signal_handler.cpp  waitpid.cpp
